# compound-ray

./: .gitignore  CMakeLists.txt
brainRenderer/: BasicController.h  CMakeLists.txt  CompoundEyeVisual.h  README.md  brainrenderer.cpp
cuda/: BufferView.h  CMakeLists.txt  GeometryData.h  LocalGeometry.h  whitted.cu  whitted.h
data/: blender_cube.gltf  blender_cube_compoundray.gltf  empty_env.blend  natural_env_main_04_dynamic_sky_small_resave.gltf  natural_env_tiny.blend  natural_env_tiny.gltf  natural_env_tiny2.blend  natural_env_tiny2.gltf  natural_env_tiny3.gltf  natural_env_tiny3_recolour.gltf  rhombohedroms.gltf  rhombohedrons.gltf  rhombohedrons_noncr.gltf
data/eyes/: cyl.eye
data/natural_env_main_04_dynamic_sky/: natural_env_main_04_dynamic_sky.gltf
eye3d/: BasicController.h  CMakeLists.txt  CompoundEyeVisual.h  brainrenderer.cpp  eye3d.cpp
libEyeRenderer3/: BasicController.cpp  BasicController.h  CMakeIncludes.cmake  CMakeLists.txt  GlobalParameters.h  MulticamScene.cpp  MulticamScene.h  average_kernel.cu  average_kernel.h  compound-ray-config.cmake  libEyeRenderer.cpp  libEyeRenderer.h  shaders.cu  summing_kernel.cu  summing_kernel.h
libEyeRenderer3/cameras/: CompoundEye.cpp  CompoundEye.h  CompoundEyeDataTypes.h  DataRecordCamera.h  GenericCamera.cpp  GenericCamera.h  GenericCameraDataTypes.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraDataTypes.h  PanoramicCamera.cpp  PanoramicCamera.h  PanoramicCameraDataTypes.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraDataTypes.h  ThreeSixtyCamera.cpp  ThreeSixtyCamera.h  ThreeSixtyCameraDataTypes.h
newGuiEyeRenderer/: BasicController.cpp  BasicController.h  CMakeLists.txt  GLDisplay.cpp  GLDisplay.h  gui.cpp
simple_eyes/: CMakeLists.txt  make_cyl_eye.cpp
support/: CMakeLists.txt
support/glad/: glad.c  glad.h
support/imgui/: CMakeLists.txt
support/tinygltf/: CMakeLists.txt
sutil/: Aabb.h  CMakeLists.txt  CUDAOutputBuffer.h  Exception.h  Scene.cpp  Scene.h  sutil.cpp  sutil.h  vec_math.h
